website/i18n/zh-CN/docusaurus-plugin-content-docs/version-2.x/api/misc/eslint-plugin/README.mdx
---
sidebar_position: 1
slug: /api/misc/@docusaurus/eslint-plugin
---

# 📦 eslint-plugin

[ESLint](https://eslint.org/) 是一个静态代码分析工具，通过编辑器提示和命令行报告问题或建议最佳实践。Docusaurus 提供了 ESLint 插件来强制执行 Docusaurus 最佳实践。

## 安装

```bash npm2yarn
npm install --save-dev @docusaurus/eslint-plugin
```

## 使用方法

### 推荐配置

在 `.eslintrc` 配置文件的 `extends` 部分添加 `plugin:@docusaurus/recommended`：

```json title=".eslintrc"
{
  "extends": ["plugin:@docusaurus/recommended"]
}
```

这将启用 `@docusaurus` ESLint 插件并使用 `recommended` 配置。有关启用的规则列表，请参阅下面的[支持的规则](#supported-rules)。

### 手动配置

如需更精细的控制，您也可以手动启用插件并直接配置要使用的规则：

```json title=".eslintrc"
{
  "plugins": ["@docusaurus"],
  "rules": {
    "@docusaurus/string-literal-i18n-messages": "error",
    "@docusaurus/no-untranslated-text": "warn"
  }
}
```

## 支持的配置

- 推荐：适用于大多数 Docusaurus 站点的推荐规则集，应从此扩展。
- 全部：启用**所有**规则。这会在次要版本之间发生变化，因此如果您希望避免意外的破坏性更改，不应使用此配置。

## 支持的规则

| Name | Description | `` |
| --- | --- | --- |
| [`@docusaurus/no-untranslated-text`](./no-untranslated-text.mdx) | Enforce text labels in JSX to be wrapped by translate calls | `` |
| [`@docusaurus/string-literal-i18n-messages`](./string-literal-i18n-messages.mdx) | Enforce translate APIs to be called on plain text labels | ✅ |

✅ = 推荐

## 配置示例

以下是一个配置示例：

```js title=".eslintrc.js"
module.exports = {
  extends: ['plugin:@docusaurus/recommended'],
  rules: {
    '@docusaurus/no-untranslated-text': [
      'warn',
      {ignoredStrings: ['·', '—', '×']},
    ],
  },
};
```