website/i18n/zh-CN/docusaurus-plugin-content-docs/version-3.0.1/api/misc/eslint-plugin/README.mdx
---
sidebar_position: 1
slug: /api/misc/@docusaurus/eslint-plugin
---

# 📦 eslint-plugin

[ESLint](https://eslint.org/) 是一款静态代码分析工具，通过编辑器提示和命令行报告问题或建议最佳实践。Docusaurus 提供了一个 ESLint 插件来强制执行 Docusaurus 的最佳实践。

## 安装

```bash npm2yarn
npm install --save-dev @docusaurus/eslint-plugin
```

## 使用方法

### 推荐配置

将 `plugin:@docusaurus/recommended` 添加到你的 `.eslintrc` 配置文件的 `extends` 部分：

```json title=".eslintrc"
{
  "extends": ["plugin:@docusaurus/recommended"]
}
```

这将启用 `@docusaurus` ESLint 插件并使用 `recommended` 配置。有关启用的规则列表，请参阅下面的[支持的规则](#supported-rules)。

### 手动配置

如需更精细的控制，你也可以手动启用插件并直接配置想要使用的规则：

```json title=".eslintrc"
{
  "plugins": ["@docusaurus"],
  "rules": {
    "@docusaurus/string-literal-i18n-messages": "error",
    "@docusaurus/no-untranslated-text": "warn"
  }
}
```

## 支持的配置

- 推荐：适用于大多数 Docusaurus 站点的推荐规则集，应作为基础扩展。
- 全部：启用**所有**规则。此配置会在次要版本之间发生变化，因此如果你希望避免意外的破坏性变更，不应使用此配置。

## 支持的规则

| Name | Description |  |
| --- | --- | --- |
| [`@docusaurus/no-untranslated-text`](./no-untranslated-text.mdx) | Enforce text labels in JSX to be wrapped by translate calls |  |
| [`@docusaurus/string-literal-i18n-messages`](./string-literal-i18n-messages.mdx) | Enforce translate APIs to be called on plain text labels | ✅ |
| [`@docusaurus/no-html-links`](./no-html-links.mdx) | Ensures @docusaurus/Link is used instead of `<a>` tags | ✅ |
| [`@docusaurus/prefer-docusaurus-heading`](./prefer-docusaurus-heading.mdx) | Ensures @theme/Heading is used instead of `<hn>` tags for headings | ✅ |

✅ = 推荐

## 配置示例

以下是一个配置示例：

```js title=".eslintrc.js"
module.exports = {
  extends: ['plugin:@docusaurus/recommended'],
  rules: {
    '@docusaurus/no-untranslated-text': [
      'warn',
      {ignoredStrings: ['·', '—', '×']},
    ],
  },
};
```